--- a/.travis.yml
+++ b/.travis.yml
@@ -61,8 +61,7 @@ before_deploy:
 
 deploy:
   provider: releases
-  api_key:
-    secure: $GITHUB_TOKEN
+  api_key: $GITHUB_TOKEN
   file_glob: true
   file: "${TRAVIS_ARTIFACTS}"
   skip_cleanup: true
