--- a/.travis.yml
+++ b/.travis.yml
@@ -38,15 +38,12 @@ before_install:
 - mkdir -p ${DEPS_DIR} && cd ${DEPS_DIR}
 - |
   if [[ "${TRAVIS_OS_NAME}" == "linux" ]]; then
-    CMAKE_URL="http://www.cmake.org/files/v3.5/cmake-3.5.2-Linux-x86_64.tar.gz"
-    mkdir cmake && travis_retry wget --no-check-certificate --quiet -O - ${CMAKE_URL} | tar --strip-components=1 -xz -C cmake
-    export PATH=${DEPS_DIR}/cmake/bin:${PATH}
     export CXX="g++-4.8" CC="gcc-4.8"
-  else
-    if ! brew ls --version cmake &>/dev/null; then brew update && brew install cmake; fi
   fi
 - cd ${TRAVIS_BUILD_DIR}
 - cmake --version
+- pwd
+- python --version
 
 install:
 - git submodule init
